<resources>
    <string name="app_name">Calculator</string>
    <string name="buttonDelete">"\u232b"</string>
    <string name="button_equal">=</string>
    <string name="button_dot">.</string>
    <string name="button_0">0</string>
    <string name="button_percent">%</string>
    <string name="button_divide">/</string>
    <string name="button_3">3</string>
    <string name="button_2">2</string>
    <string name="button_1">1</string>
    <string name="button_multiply">*</string>
    <string name="button_6">6</string>
    <string name="button_5">5</string>
    <string name="button_4">4</string>
    <string name="button_sub">-</string>
    <string name="button_9">9</string>
    <string name="button_8">8</string>
    <string name="button_7">7</string>
    <string name="button_plus">+</string>
    <string name="button_ac">AC</string>
    <string name="button_swap">Spec</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="button_lp">(</string>
    <string name="button_sin">sin</string>
    <string name="button_cos">cos</string>
    <string name="button_tan">tan</string>
    <string name="button_rp">)</string>
    <string name="button_log">log</string>
    <string name="button_ln">ln</string>
    <string name="button_e">e</string>
    <string name="button_pi">&#960;</string>
    <string name="button_sqrt">"\u221a"</string>
    <string name="button_x_pow_n">^</string>
    <string name="button_abs">|x|</string>
    <string name="button_factorial">!</string>
    <string name="switch_fragment">Дадатковыя прылады</string>
    <string name="button_g">g</string>
</resources>
